--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/SainyTK/learn-typescript/issues"
   },
-  "homepage": "https://github.com/SainyTK/learn-typescript#readme"
+  "homepage": "https://github.com/SainyTK/learn-typescript#readme",
+  "dependencies": {
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
+    "@types/readline-sync": "^1.4.8"
+  }
 }
